# sobol_burley

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
benches/: bench.rs
direction_numbers/: new-joe-kuo-6.256.txt
examples/: plots.rs
licenses/: JOE_KUO.txt  MIT.txt
src/: lib.rs  parts.rs  wide.rs
