[package]
name = "sobol_burley"
version = "0.1.0"
authors = ["Nathan Vegdahl <cessen@cessen.com>"]
edition = "2018"
license = "MIT, Apache 2.0, 3-clause BSD"
build = "build.rs"

[lib]
name = "sobol"
path = "src/lib.rs"

[dev-dependencies]
rand = "0.6"
bencher = "0.1.5"

[[bench]]
name = "bench"
harness = false