[package]
name = "sobol_burley"
version = "0.1.0"
description = "Sobol sequence with seedable Owen scrambling and shuffling"
categories = ["algorithms", "science", "simulation"]
keywords = ["sobol", "low-discrepancy", "monte-carlo", "quasirandom", "sampling", "no_std"]
documentation = "https://docs.rs/sobol_burley"
repository = "https://github.com/cessen/sobol_burley"
readme = "README.md"
authors = ["Nathan Vegdahl <cessen@cessen.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
build = "build.rs"

[lib]
name = "sobol_burley"
path = "src/lib.rs"

[dev-dependencies]
rand = "0.6"
bencher = "0.1.5"

[[bench]]
name = "bench"
harness = false